// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main in Selection mode should render correctly 1`] = `
<main
  className="makeStyles-main-3"
>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-heroContent-1"
    maxWidth="md"
  >
    <WithStyles(ForwardRef(Typography))
      align="center"
      color="textPrimary"
      gutterBottom={true}
      variant="h4"
    >
      Wähle bis zu 5 Karten aus
    </WithStyles(ForwardRef(Typography))>
    <div>
      <WithStyles(ForwardRef(Grid))
        container={true}
        justify="center"
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={3}
        >
          <WithStyles(ForwardRef(Button))
            color="secondary"
            fullWidth={true}
            onClick={[MockFunction]}
            variant="contained"
          >
            Zur Auswahl hinzufügen
          </WithStyles(ForwardRef(Button))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </WithStyles(ForwardRef(Container))>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-content-2"
    maxWidth="md"
  >
    <PlantList
      plants={Array []}
    />
  </WithStyles(ForwardRef(Container))>
</main>
`;

exports[`Main in Start mode should render correctly 1`] = `
<main
  className="makeStyles-main-3"
>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-heroContent-1"
    maxWidth="md"
  >
    <WithStyles(ForwardRef(Typography))
      align="center"
      color="textPrimary"
      gutterBottom={true}
      variant="h4"
    >
      Erstelle dein Mandala!
    </WithStyles(ForwardRef(Typography))>
    <div>
      <WithStyles(ForwardRef(Grid))
        container={true}
        justify="center"
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={3}
        >
          <WithStyles(ForwardRef(Button))
            color="secondary"
            fullWidth={true}
            onClick={[MockFunction]}
            variant="contained"
          >
            Start
          </WithStyles(ForwardRef(Button))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </div>
  </WithStyles(ForwardRef(Container))>
  <WithStyles(ForwardRef(Container))
    className="makeStyles-content-2"
    maxWidth="md"
  >
    <Landing />
  </WithStyles(ForwardRef(Container))>
</main>
`;
